# odds-api

./: .dockerignore  .gitignore  .pdm-python  .pdm.toml  Dockerfile  docker-compose.yml  entrypoint-betcity-listener.sh  entrypoint-parser-listener.sh  entrypoint-tgbot.sh  entrypoint-worker.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0a78ee362485_add_jsonb_odds_columns.py  243acb21cc72_add_additional_outcome_column.py  6edae228189e_add_unaccent_extension.py  a77e2357df31_add_country_column_to_league.py  ab67a86ccd33_init.py  b0918a42528c_add_event_url_field_to_bet.py  bb47f8eab4d4_set_source_id_in_bet_to_nullable.py  c90b5433b984_make_bet_odds_nullable.py  eceb33add5b9_add_outcomes_jsonb_columns.py
docker/: Dockerfile  supervisord.conf
docker/entrypoints/: entrypoint-fonbet-listener.sh  entrypoint.sh
docker/supervisord.conf.d/: listeners.conf  webui.conf  worker.conf
migrations/models/: 10_20230104215437_add bets.py  11_20230105173316_float to decimal.py  12_20230108013943_add notification model.py  1_20221227071205_update.py  2_20230102141442_add season.py  3_20230102142939_non null.py  4_20230102144140_add coverage.py  5_20230103033341_add name.py  6_20230103035413_update.py  7_20230103220215_add fixture.py  8_20230104024246_update.py  9_20230104025018_update.py
oddsapi/: README.md  api_client.py  betcity_listener.py  client.py  commands.py  db.py  db_import.py  fonbet_listener.py  helpers.py  loaders.py  main.py  models.py  parser_listener.py  queue.py  report.py  settings.py  tg.py
oddsapi/apifootball/: apiclient.py  loader.py
oddsapi/database/: clean.py  data_models.py  init.py  models.py  redis_connection.py
oddsapi/database/repository/: bet.py  bookmaker.py  country.py  fixture.py  league.py  notification.py  season.py  team.py
oddsapi/filter/: fixture.py
oddsapi/parser_import/: base.py  betcity.py  convert.py  fonbet.py  listener.py  marathon.py  pinnacle.py
oddsapi/tgbot/: connect.py  tg_notify.py  tg_report.py  tgbot.py
oddsapi/ui/: gradioui.py  helpers.py
