[tool.pdm]
[tool.pdm.dev-dependencies]

[tool.aerich]
tortoise_orm = "oddsapi.settings.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./."

[tool.pdm.scripts]
import = { call = 'oddsapi.main:main' }
import-static = { call = 'oddsapi.main:run_import_static' }
worker = "arq oddsapi.queue.WorkerSettings"

tg-bot = { call = 'oddsapi.tg:main' }
tg-notify = { call = 'oddsapi.tg:run_tg_notify' }
tg-clean-notify = { call = 'oddsapi.tg:run_tg_clean_notify' }

parser-listener = { call = 'oddsapi.parser_listener:main'}

[project]
name = ""
version = ""
description = ""
dependencies = [
    "python-dotenv>=0.21.0",
    "uvloop>=0.17.0",
    "redis>=4.4.1",
    "tortoise-orm[asyncpg]>=0.19.2",
    "aerich>=0.7.1",
    "click>=8.1.3",
    "httpx>=0.23.1",
    "pyrogram>=2.0.93",
    "arq>=0.25.0",
    "tgcrypto>=1.2.5",
    "psycopg[binary]>=3.1.7",
    # plotly and deps
    "plotly>=5.11.0",
    "numpy>=1.24.1",
    "kaleido==0.2.1",
    "dateparser>=1.1.6",
    "Pillow>=9.4.0",
    "psycopg2-binary>=2.9.5",
]
requires-python = ">=3.11"
